# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2024 UxuginPython

[package]
name = "rrtk"
version = "0.6.0-alpha.0"
license = "BSD-3-Clause"
edition = "2021"
authors = ["UxuginPython <uxugin at uxugin dot com>"]
repository = "https://github.com/UxuginPython/rrtk"
description = "Rust Robotics ToolKit"
keywords = ["robotics", "control"]
categories = ["science::robotics", "no-std"]
exclude = ["generatetestall.py", "testall.sh", "checkall.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[features]
alloc = []
std = ["alloc"]
devices = []
dim_check_debug = []
dim_check_release = ["dim_check_debug"]
default = ["std", "dim_check_debug"]
[package.metadata.docs.rs]
all-features = true
