# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2024-2025 UxuginPython

[package]
name = "rrtk"
version = "0.7.0-alpha.4"
license = "BSD-3-Clause"
edition = "2024"
authors = ["UxuginPython <uxugin at uxugin dot com>"]
homepage = "http://rrtk.org"
repository = "https://github.com/UxuginPython/rrtk"
description = "Rust Robotics ToolKit"
keywords = ["robotics", "control"]
categories = ["science::robotics", "no-std"]
exclude = ["generatetestall.py", "testall.sh", "checkall.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = { version = "0.2.11", default-features = false, optional = true }
micromath = { version = "2.1.0", default-features = false, optional = true }
[features]
alloc = []
std = ["alloc", "internal_enhanced_float"]
devices = []
dim_check_debug = []
dim_check_release = ["dim_check_debug"]
libm = ["dep:libm", "internal_enhanced_float"]
micromath = ["dep:micromath", "internal_enhanced_float"]
internal_enhanced_float = []
default = ["std", "dim_check_debug"]
[package.metadata.docs.rs]
all-features = true
